[package]
name = "skip_ratchet"
version = "0.2.1"
edition = "2021"
description = "Skip ratchet"
keywords = ["wnfs", "webnative", "skip-ratchet", "decentralisation"]
categories = [
  "filesystem",
  "cryptography",
]
license = "Apache-2.0"

[dependencies]
hex = "0.4"
rand_core = "0.6.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", optional = true }
sha3 = "0.10"

[features]
serde = ["dep:serde", "dep:serde_bytes"]

[dev-dependencies]
proptest = "1.0"
test-strategy = "0.3"
rand = "0.8"
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }

[profile.test]
opt-level = 3
overflow-checks = false

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
